deployment-mysql-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-server
        image: mysql:8.0-oracle@sha256:a3dff78d876222746a0bacc36dd7e4bf9e673c85fb7ee0d12ed25bd32c43c19b
        ports:
        - containerPort: 3306
        args:
          - --character-set-server=utf8
          - --collation-server=utf8_bin
          - --default-authentication-plugin=mysql_native_password
          - --log-bin=mysql-bin
          - --log_bin_trust_function_creators=1
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
