deployment-zabbix-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-frontend
  labels:
    app.kubernetes.io/name: zabbix-frontend
    app.kubernetes.io/version: "7.4"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zabbix-frontend
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zabbix-frontend
        app.kubernetes.io/version: "7.4"
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: observability
        app.kubernetes.io/managed-by: argocd
    spec:
      containers:
      - name: zabbix-frontend
        image: zabbix/zabbix-web-nginx-mysql:alpine-7.4-latest@sha256:374bc99b4cf49191c3fbd6c78fd5c8cecd1cb5963b73638aacc46ea6759204a5
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
