deployment-zabbix-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: zabbix-server
  labels:
    app.kubernetes.io/name: zabbix-server
    app.kubernetes.io/version: "7.4"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zabbix-server
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zabbix-server
        app.kubernetes.io/version: "7.4"
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: observability
        app.kubernetes.io/managed-by: argocd
    spec:
      containers:
      - name: zabbix-server
        image: zabbix/zabbix-server-mysql:alpine-7.4-latest@sha256:39aef12921f6e4572984164164ab1cbb7acc2058e349ff1fb622b48f0280e2f3
        ports:
        - name: zabbix-trapper
          containerPort: 10051
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
