zabbix-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-frontend
  labels:
    app: zabbix-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-frontend
  template:
    metadata:
      labels:
        app: zabbix-frontend
    spec:
      containers:
      - name: zabbix-frontend
        image: zabbix/zabbix-web-nginx-mysql:alpine-7.4-latest@sha256:374bc99b4cf49191c3fbd6c78fd5c8cecd1cb5963b73638aacc46ea6759204a5
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
