svc-mysql-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: database
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: mysql
