svc-zabbix-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-frontend-svc
spec:
  selector:
    app: zabbix-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
