svc-zabbix-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-svc
  labels:
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: zabbix-server
    app.kubernetes.io/component: backend
  ports:
    - name: zabbix-server
      protocol: TCP
      port: 10051
      targetPort: zabbix-trapper
