zabbix-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-svc
spec:
  selector:
    app: zabbix-server
  ports:
    - protocol: TCP
      port: 10051
      targetPort: 10051
