ingress-zabbix-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-frontend
spec:
  rules:
  - host: eliezer.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-frontend-svc
            port:
              number: 8080
